Theme/theme.css
html, body { height: 100%; }
select,
textarea,
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"],
.uneditable-input {
    margin-bottom:2px;
}
#wrap {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    /* Negative indent footer by it's height */
    margin: 0 auto -40px;
}

#push,
#footer {
    height: 30px;
}
.navbar-brand{
    padding: 11px;
}
.navbar-nav.navbar-right:last-child{
    margin-right: 0px;
}
.content-block {
    margin-top: 60px;
}
.glyphicon:empty{
    margin-right: 7px;
}

h2{
    margin-top: 1px;
}
#footer {
    background-color: #f5f5f5;
    text-align: center;
    font-size: 13px;
    font-weight: bold;
    padding-top:10px;
}

#footer a {
    color: #77b4d9;
    text-decoration: none;
}
.alert-block{
    background-color: #EABBA5;
    opacity:1;
    border-radius: 10px;
    padding:10px;
}

.feedback{
    margin-top: 0px;
    display: block;
    line-height: 25px;
    position: fixed;
    font-size: 30px;
    margin-left: 250px;
    border-radius: 10px;
    padding:10px;
}

.float-right
{
    float: right;
}

.float-center
{
    float: center;
}

.float-left
{
    float: left;
}
.container {
    width:inherit;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: 0px;
    margin-left: 0px;
}

#submenu {
    width:100%;
    background-color:#ddd;
    height:27px;
}
.navbar{
    margin-bottom :0px;
}

/*
required for the dashboard submenu
*/
.menudash{
    width:100%;
    height:50px;
    overflow: hidden;
}
.dashlist{
    float:left;
    color:#888;
    font: 13px/27px sans-serif;
    font-weight:bold;
}

.greydashmenu {
    display: block;
    list-style: none outside none;
    margin: 0;
    padding: 0;
}

.greydashmenu li {
    list-style: none outside none;
    margin: 0;
    padding: 0;
    border-right: 1px solid #eee;
    float: left;
}

.greydashmenu li a {
    display: block;
    margin: 0;
    padding: 0 12px;
    border-right: 1px solid #ccc;
    text-decoration: none;
    font: 13px/27px sans-serif;
    text-transform: none;
}
.menu-icon{
    text-align:right;
    padding:4px;
}

.form-inline .form-group input select{
    width:140px;
}
.groupheader {
    background-color: #BBB;
}
.table> tbody > tr > .groupheader:hover{
    background-color: #faf2cc;
}

.shortpading{
    padding-right: 1px;
    padding-left: 1px;
}

tbody  tr .form-control{
    height: 24px;
    margin-bottom: -4px;
    margin-left:-13px;
    margin-top:-2px;
    padding-top:2px;
    padding-bottom:2px;
}
.option_name{
    width:140px;
    padding-right:15px;
}


/*
login block flags size style
*/
#flags img{
    width:16px;
    height:16px;
}

#login-form .well{
    width:  500px;
}

.emon-version{
    color:#999;
}
.iconbutton{
    cursor:pointer;
    width: 30px;
    height:25px;
    text-align: center;
    vertical-align: center;
}

.inputvalue{
    color:#888;
    font-size:12px
}

.alertmsg {
    position:fixed;
    margin-top:50px;
    z-index:1;
}


.readapikey .writeapikey  {

}

.modal.modal-wide .modal-dialog {
  width: 90%;
}
.modal-wide .modal-body {
  overflow-y: auto;
}


.emoncms-dialog .modal-header {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}
.emoncms-dialog .emoncms-dialog-title {
    color: #fff;
    display: inline-block;
}
.emoncms-dialog.type-default .emoncms-dialog-title {
    color: #333;
}
.emoncms-dialog.size-normal .emoncms-dialog-title {
    font-size: 16px;
}
.emoncms-dialog.size-large .emoncms-dialog-title {
    font-size: 24px;
}
.emoncms-dialog .emoncms-dialog-close-button {
    float: right;
    filter:alpha(opacity=90);
    -moz-opacity:0.9;
    -khtml-opacity: 0.9;
    opacity: 0.9;
}
.emoncms-dialog.size-normal .emoncms-dialog-close-button {
    font-size: 20px;
}
.emoncms-dialog.size-large .emoncms-dialog-close-button {
    font-size: 30px;
}
.emoncms-dialog .emoncms-dialog-close-button:hover {
    cursor: pointer;
    filter: alpha(opacity=100);
    -moz-opacity: 1;
    -khtml-opacity: 1;
    opacity: 1;
}
.emoncms-dialog.size-normal .emoncms-dialog-message {
    font-size: 14px;
}
.emoncms-dialog.size-large .emoncms-dialog-message {
    font-size: 18px;
}
.emoncms-dialog.type-default .modal-header {
    background-color: #fff;
}
.emoncms-dialog.type-info .modal-header {
    background-color: #5bc0de;
}
.emoncms-dialog.type-primary .modal-header {
    background-color: #428bca;
}
.emoncms-dialog.type-success .modal-header {
    background-color: #5cb85c;
}
.emoncms-dialog.type-warning .modal-header {
    background-color: #f0ad4e;
}
.emoncms-dialog.type-danger .modal-header {
    background-color: #d9534f;
}
.emoncms-dialog .button-icon {
    margin-right: 3px;
}

/**
* Icon animation
* Copied from font-awesome: http://fontawesome.io/
**/
.icon-spin {
    display: inline-block;
    -moz-animation: spin 2s infinite linear;
    -o-animation: spin 2s infinite linear;
    -webkit-animation: spin 2s infinite linear;
    animation: spin 2s infinite linear;
}
@-moz-keyframes spin {
    0% {
        -moz-transform: rotate(0deg);
    }
    100% {
        -moz-transform: rotate(359deg);
    }
}
@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(359deg);
    }
}
@-o-keyframes spin {
    0% {
        -o-transform: rotate(0deg);
    }
    100% {
        -o-transform: rotate(359deg);
    }
}
@-ms-keyframes spin {
    0% {
        -ms-transform: rotate(0deg);
    }
    100% {
        -ms-transform: rotate(359deg);
    }
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(359deg);
    }
}
/** End of icon animation **/

